# katana-vmm

./: Cargo.toml  README.md
crates/katana-cli/: Cargo.toml
crates/katana-cli/src/: format.rs  main.rs
crates/katana-cli/src/commands/: create.rs  list.rs  show.rs  start.rs  stats.rs  stop.rs
crates/katana-client/src/: lib.rs
crates/katana-core/src/instance/: state.rs  storage.rs
crates/katana-core/src/qemu/: mod.rs  qmp.rs  vm.rs  vm_instance.rs  vm_managed.rs
crates/katana-core/src/state/: db.rs  schema.sql
crates/katana-daemon/src/: main.rs  state.rs
crates/katana-daemon/src/api/: instances.rs  operations.rs  stats.rs
crates/katana-daemon/src/models/: conversions.rs
src/: error.rs  main.rs
src/cli/: backup.rs  create.rs  export.rs  logs.rs  mod.rs  restore.rs  start.rs  stats.rs
src/instance/: config.rs  mod.rs  storage.rs  storage_tests.rs
src/port/: allocator_tests.rs
src/qemu/: config.rs  qmp.rs
src/state/: db_tests.rs
src/tee/: mod.rs
tests/: integration_tests.rs
