[package]
name = "katana-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# QEMU/VM management
qmp = "0.1"
nix = { version = "0.29", features = ["process", "signal"] }

# State persistence
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.39", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Path/filesystem
directories = "5.0"
byte-unit = "5.1"

# Port scanning
port_scanner = "0.1"

# Process management
sysinfo = "0.32"

# Hex encoding (for measurements)
hex = "0.4"

# SHA hashing (for boot components)
sha2 = "0.10"

# HTTP client (for RPC calls to katana)
reqwest = { version = "0.12", features = ["json"] }
ureq = "2.10"

# Time handling
chrono = "0.4"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Home directory
dirs = "5.0"

# Temporary files
tempfile = "3.9"

[dev-dependencies]
